# Sleepiness

./: .gitignore  LICENSE  README.md  face_detection.py  pyproject.toml  realTimeDetection.py  requirements.txt  train.py
.github/workflows/: release-on-keyword.yml
data/labels/: awake.88d60bdc-ca53-11ee-9dae-6bc3a5752140.txt  awake.8da15c48-ca53-11ee-9dae-6bc3a5752140.txt  awake.92720a60-ca53-11ee-9dae-6bc3a5752140.txt  sleepy.b6dc1dbe-ca53-11ee-9dae-6bc3a5752140.txt  sleepy.b80f1560-ca53-11ee-9dae-6bc3a5752140.txt  sleepy.b943db6e-ca53-11ee-9dae-6bc3a5752140.txt  sleepy.ba779728-ca53-11ee-9dae-6bc3a5752140.txt
empty_seat/: _empty_seat_train.py  empty_seat.py  kNNutils.py
eye/: detectEye.py  realTimeEyeDetection.py
face/: detectFace.py  realTimeFaceDetection.py
hand/: detectHand.py  handYolo.py  realTimeHandDetection.py
sleepiness/: __init__.py  __main__.py  main.py  pipelines.py
sleepiness.egg-info/: SOURCES.txt
sleepiness/end2end/: e2e_train.py  utils.py
sleepiness/evaluation/: models.py  testbed.py  utils.py
sleepiness/eye/: detectEye.py  detection.py  eyeClassification.py  eye_clustering_model.joblib  realTimeEyeClassification.py  realTimeEyeDetection.py
sleepiness/face/: detectFace.py  detection.py  realTimeFaceDetection.py
sleepiness/hand/: detectHand.py  detection.py  handYolo.py  realTimeHandDetection.py
sleepiness/initial_tests/: generateTrainingData.py
sleepiness/sleepiness.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sleepiness/test/: aggregators.py  models.py  testbed.py  utils.py
sleepiness/utility/: augment_imgs.py  cluster_eyes.py  create_eyes.py  create_faces.py  misc.py  (+9 more)
src/: pipeline.py
utility/: sample_random_images.py  train_test_split.py
(+47 files in other folders)
