[tool.poetry]
name = "sleepiness"
version = "1.0.0"
authors = [
  "Martin Waltz <martin.waltz@tu-dresden.de>",
  "Niklas Paulig <niklas.paulig@tu-dresden.de>"
]
description = "Detecting sleepiness of people"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MarWaltz/Sleepiness"
Issues = "https://github.com/MarWaltz/Sleepiness/issues"

[tool.poetry.dependencies]
python='>=3.8'
matplotlib='>=3.6.3'
numpy='>=1.24.1'
opencv-contrib-python='4.9.0.80'
opencv-python='>=4.9.0.80'
packaging='23.0'
pandas='>=1.5.2'
pillow='>=10.0.0'
scipy='>=1.10'
supervision='>=0.3.2'
torchvision='>=0.16'
tqdm='>=4.64'
ultralytics='>=8.0'

[tool.poetry.scripts]
sleepiness = "sleepiness.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
